# pyetlx

./: .gitignore  LICENSE  README.md  build.py  etlx.c  etlx.go  etlx.py  fix.py  go.mod  go.py  go.sum  gopy.toml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: release.yml  release_test.yml
