[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyetlx"
version = "0.1.0"
description = "Python bindings for the etlx Go library"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [
  { name="Real Data-Driven", email="real.datadriven@gmail.com" },
]

[project.urls]
Homepage = "https://github.com/realdatadriven/etlx"
"Bug Tracker" = "https://github.com/realdatadriven/etlx/issues"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"src" = [
    "*.so",    # Include shared libraries
    "*.h",     # Include header files
    "*.c",     # Include C files if needed
]

#[tool.setuptools.include-package-data] 
# This ensures files specified by `package_data` and `MANIFEST.in` are included
