[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyetlx"
version = "0.1.2"
description = "Python bindings for the etlx Go library"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
authors = [
  { name="Real Data-Driven", email="real.datadriven@gmail.com" },
]

[project.urls]
Homepage = "https://github.com/realdatadriven/etlx"
"Bug Tracker" = "https://github.com/realdatadriven/etlx/issues"

[tool.setuptools]
packages = ["src"]
include-package-data = true

[tool.setuptools.package-data]
"src" = [
    "*.so",    # Include shared libraries
    "*.lib",    # Include shared libraries
    "*.dll",    # Include shared libraries
    "*.h",     # Include header files
    "*.c",     # Include C files if needed
]

#[tool.setuptools.include-package-data] 
# This ensures files specified by `package_data` and `MANIFEST.in` are included

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}  # Ensure dynamic versioning if needed