[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyetlx"
version = "0.0.2"
description = ""
authors = [
    { name="realdatadriven", email="real.datadriven@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9,<4"
license = { file = "LICENSE" }
keywords = ["etl", "python", "data"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/realdatadriven/pypyetlx"
Documentation = "https://github.com/realdatadriven/pypyetlx"
Source = "https://github.com/realdatadriven/pypyetlx"
Tracker = "https://github.com/realdatadriven/pypyetlx/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]